@@ -59,6 +59,7 @@ foreach($pireps as $report)
 		?>
 	</td>
 	<td align="left" valign="top" >
+		<strong>Aircraft: </strong><?php echo $report->aircraft. " ($report->registration)" ?><br />
 	<?php
 		// Get the additional fields
 		//	I know, badish place to put it, but it's pulled per-PIREP
