@@ -1,0 +1,15 @@
+<h3>Tasks</h3>
+<ul class="filetree treeview-famfamfam">
+	<li><span class="file">
+		<a href="?admin=addschedule">Add Schedule</a>
+	</span></li>
+	<li><span class="file">
+		<a href="?admin=activeschedules">View Active Schedule</a>
+	</span></li>
+	<li><span class="file">
+		<a href="?admin=inactiveschedules">View Inactive Schedules</a>
+	</span></li>
+</ul>
+<h3>Help</h3>
+<p>These are all the schedules your airlines currently server. When you add a schedule, you can add it on a per-airline basis.</p>
+<p>Notes can be used to add schedule frequency, or any other related information.</p>
